--- a/web/src/main/webapp/static/js/templates/search/search-results-container.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-results-container.hbs
@@ -2,9 +2,10 @@
 <table class="search-results table table-hover">
     <thead>
     <tr>
+        <th><i class="icon-check"></i></th>
         <th>Label</th>
-        <th>Task</th>
-        <th>Type</th>
+        <th class="hide-narrow">Task</th>
+        <th class="hide-narrow">Type</th>
         <th>Started</th>
     </tr>
     </thead>
