--- a/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
@@ -15,7 +15,11 @@
                 <a class="btn btn-link" href="#clear" role="button" id="instanceClearButton" type="button">Clear</a>
             </li>-->
             <li class="nav pull-right">
-                <a class="btn" href="#export" title="Export all results" id="exportButton" type="button"><i class="icon-download-alt"></i> Export</a>
+                <button class="btn btn-inverse selected-result-btn hide" id="assign-button" title="Assign task" type="button"><i class="icon-user icon-white"></i></button>
+                <button class="btn btn-inverse selected-result-btn hide" id="suspend-button" title="Suspend process" type="button"><i class="icon-off icon-white"></i></button>
+                <button class="btn btn-danger selected-result-btn hide" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="icon-trash icon-white"></i></button>
+
+                <!--<a class="btn" href="#export" title="Export all results" id="exportButton" type="button"><i class="icon-download-alt"></i> Export</a>-->
             </li>
         </ul>
     </div>
