--- a/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
@@ -16,6 +16,7 @@
             </li>-->
             <li class="nav pull-right">
                 <button class="btn btn-inverse selected-result-btn hide" id="assign-button" title="Assign task" type="button"><i class="icon-user icon-white"></i></button>
+                <button class="btn btn-inverse selected-result-btn hide" id="history-dialog-button" data-target="#history-dialog" data-backdrop="false" data-toggle="modal" title="History" type="button"><i class="icon-tasks icon-white"></i></button>
                 <button class="btn btn-inverse selected-result-btn hide" id="suspend-button" title="Suspend process" type="button"><i class="icon-off icon-white"></i></button>
                 <button class="btn btn-danger selected-result-btn hide" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="icon-trash icon-white"></i></button>
 
@@ -34,3 +35,35 @@
         </ul>
     </div>
 </form>
+
+<div id="delete-dialog" class="modal hide fade">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Are you sure you want to delete this process?</h3>
+    </div>
+    <div class="modal-body">
+        <div class="alert alert-error">
+            <p>Deleting a process is permanent and cannot be reversed.</p>
+            <p>If you simply want to prevent a process from continuing to execute, then it's generally safer to suspend it.</p>
+        </div>
+        <textarea class="input-block-level" placeholder="Enter a reason" name="reason" id="delete-reason" rows="4"></textarea>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+        <button type="button" id="delete-button" class="btn btn-danger">Delete</button>
+    </div>
+</div>
+
+<div id="history-dialog" class="modal hide fade">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>History</h3>
+    </div>
+    <div class="modal-body">
+
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    </div>
+</div>
+
