--- a/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
@@ -1,5 +1,5 @@
 <form id="search-form" action="" method="GET">
-    <div>
+    <div class="navbar">
         <ul class="toolbar-items">
             <li class="nav">
                 <div class="btn-group">
@@ -7,21 +7,29 @@
                 </div>
             </li>
             <li class="nav">
-                <div>
-                    <button class="btn" role="button" id="instanceSearchButton" type="submit">&nbsp;&nbsp;<i class="icon-search"></i>&nbsp;&nbsp;</button>
+                <button class="btn" role="button" id="instanceSearchButton" type="submit">&nbsp;&nbsp;<i class="icon-search"></i>&nbsp;&nbsp;</button>
+            </li>
+            <li class="nav">
+                <div class="dropdown">
+                    <button class="btn dropdown-toggle" data-toggle="dropdown" data-target="new-form-dropdown" id="new-form-button" type="button"><i class="icon-plus-sign"></i></button>
+                    <ul id="new-form-dropdown" class="dropdown-menu" role="menu" aria-labelledby="new-form-button">
+                        {{#each definitions}}
+                        <li class="presentation" ><a href="{{link}}">{{task.processDefinitionLabel}}</a></li>
+                        {{/each}}
+                    </ul>
                 </div>
             </li>
             <!--<li class="nav btn-group">
                 <a class="btn btn-link" href="#clear" role="button" id="instanceClearButton" type="button">Clear</a>
             </li>-->
-            <li class="nav pull-right">
-                <button class="btn btn-inverse selected-result-btn hide" id="assign-dialog-button" data-target="#assign-dialog" data-backdrop="false" data-toggle="modal" title="Assign task" type="button"><i class="icon-user icon-white"></i></button>
-                <button class="btn btn-inverse selected-result-btn hide" id="history-dialog-button" data-target="#history-dialog" data-backdrop="false" data-toggle="modal" title="History" type="button"><i class="icon-tasks icon-white"></i></button>
-                <button class="btn btn-inverse selected-result-btn hide" id="suspend-button" title="Suspend process" type="button"><i class="icon-off icon-white"></i></button>
-                <button class="btn btn-danger selected-result-btn hide" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="icon-trash icon-white"></i></button>
-                <button class="btn btn-inverse" id="new-form-button" type="button"><i class="icon-plus-sign icon-white"></i></button>
-                <!--<a class="btn" href="#export" title="Export all results" id="exportButton" type="button"><i class="icon-download-alt"></i> Export</a>-->
-            </li>
+            <ul class="nav pull-right">
+                <li>
+                    <button class="btn btn-inverse selected-result-btn hide" id="assign-dialog-button" data-target="#assign-dialog" data-backdrop="false" data-toggle="modal" title="Assign task" type="button"><i class="icon-user icon-white"></i></button>
+                    <button class="btn btn-inverse selected-result-btn hide" id="history-dialog-button" data-target="#history-dialog" data-backdrop="false" data-toggle="modal" title="History" type="button"><i class="icon-tasks icon-white"></i></button>
+                    <button class="btn btn-inverse selected-result-btn hide" id="suspend-button" title="Suspend process" type="button"><i class="icon-off icon-white"></i></button>
+                    <button class="btn btn-danger selected-result-btn hide" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="icon-trash icon-white"></i></button>
+                <li>
+            </ul>
         </ul>
     </div>
     <div>
