--- a/web/src/main/webapp/static/js/templates/form/field-file.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-file.hbs
@@ -7,6 +7,7 @@
        size="{{displayValueLength}}"
        data-max-inputs="{{maxInputs}}"
        data-min-inputs="{{minInputs}}"
+{{#if accept}}accept={{accept}}{{/if}}
 {{#if required}}class="required"{{/if}}
 {{#if customValidity}}oninvalid="setCustomValidity('{{customValidity}}')"{{/if}}
 {{#if pattern}}pattern="{{pattern}}"{{/if}}
