--- a/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
@@ -33,10 +33,7 @@
         <h3>Are you sure you want to delete this process?</h3>
     </div>
     <div class="modal-body">
-        <div class="alert alert-error">
-            <p>Deleting a process is permanent and cannot be reversed.</p>
-            <p>If you simply want to prevent a process from continuing to execute, then it's generally safer to suspend it.</p>
-        </div>
+        <p>Deleting a process <b>permanently</b> stops execution and <u>cannot</u> be reversed.</p>
         <textarea class="input-block-level" placeholder="Enter a reason" name="reason" id="delete-reason" rows="4"></textarea>
     </div>
     <div class="modal-footer">
