--- a/web/src/main/webapp/static/js/templates/search/search-result.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-result.hbs
@@ -1,7 +1,7 @@
 <td><input type="checkbox" class="result-checkbox"/></td>
 {{#if task}}
     {{#with task}}
-    <td><a href="{{../link}}.html" target="_blank">{{processInstanceLabel}}</a></td>
+    <td><a href="{{../link}}.html" rel="external">{{processInstanceLabel}}</a></td>
     <td class="hide-narrow">{{taskLabel}}</td>
     <td class="hide-narrow">{{processDefinitionLabel}}</td>
     <td>{{date startTime}}</td>
