--- a/web/src/main/webapp/static/js/templates/form/notification.hbs
+++ b/web/src/main/webapp/static/js/templates/form/notification.hbs
@@ -1,5 +1,7 @@
 <div class="alert alert-block alert-error fade in">
+    {{#unless permanent}}
     <button type="button" class="close" data-dismiss="alert">×</button>
+    {{/unless}}
     <h4 class="alert-heading">{{title}}</h4>
     <br/>
     <p>{{message}}</p>
