--- a/web/src/main/webapp/static/js/templates/search/search-results-container.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-results-container.hbs
@@ -4,9 +4,10 @@
     <tr>
         <th><i class="icon-check"></i></th>
         <th>Label</th>
+        <th class="hide-narrow">Status</th>
         <th class="hide-narrow">Task</th>
         <th class="hide-narrow">Type</th>
-        <th>Started</th>
+        <th>Date</th>
     </tr>
     </thead>
 </table>
