--- a/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
@@ -5,12 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="../static/css/layout.css" rel="stylesheet">
+    <link href="../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+    <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"/>
+    <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href="../static/css/layout.css" rel="stylesheet"/>
     <!--[if lt IE 9]>
     <script src="https://raw.github.com/aFarkas/html5shiv/master/dist/html5shiv.js"></script>
     <![endif]-->
+
 </head>
 <body role="application">
     <div class="navbar navbar-fixed-top">
