--- a/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
@@ -26,7 +26,7 @@
                 <li>
                     <!--<button class="btn btn-inverse selected-result-btn hide" id="assign-dialog-button" data-target="#assign-dialog" data-backdrop="false" data-toggle="modal" title="Assign task" type="button"><i class="icon-user icon-white"></i></button>-->
                     <button class="btn btn-inverse selected-result-btn hide" id="history-dialog-button" data-target="#history-dialog" data-backdrop="false" data-toggle="modal" title="History" type="button"><i class="icon-calendar-empty icon-white"></i></button>
-                    <button class="btn btn-inverse selected-result-btn hide" id="suspend-button" title="Suspend process" type="button"><i class="icon-off icon-white"></i></button>
+                    <button class="btn btn-inverse selected-result-btn hide" id="suspend-dialog-button" data-target="#suspend-dialog" data-backdrop="false" data-toggle="modal" title="Suspend process" type="button"><i class="icon-off icon-white"></i></button>
                     <button class="btn btn-danger selected-result-btn hide" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="icon-trash icon-white"></i></button>
                 <li>
             </ul>
@@ -65,10 +65,7 @@
         <h3>Are you sure you want to delete this process?</h3>
     </div>
     <div class="modal-body">
-        <div class="alert alert-error">
-            <p>Deleting a process is permanent and cannot be reversed.</p>
-            <p>If you simply want to prevent a process from continuing to execute, then it's generally safer to suspend it.</p>
-        </div>
+        <p>Deleting a process <b>permanently</b> stops execution and <u>cannot</u> be reversed.</p>
         <textarea class="input-block-level" placeholder="Enter a reason" name="reason" id="delete-reason" rows="4"></textarea>
     </div>
     <div class="modal-footer">
@@ -87,6 +84,21 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+    </div>
+</div>
+
+<div id="suspend-dialog" class="modal hide fade">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Are you sure you want to suspend this process?</h3>
+    </div>
+    <div class="modal-body">
+        <p>Suspending a process pauses execution.</p>
+        <textarea class="input-block-level" placeholder="Enter a reason" name="reason" id="suspend-reason" rows="4"></textarea>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+        <button type="button" id="suspend-button" class="btn btn-primary">Suspend</button>
     </div>
 </div>
 
