--- a/web/src/main/webapp/static/js/templates/search/search-results-container.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-results-container.hbs
@@ -6,7 +6,7 @@
         <th>Label</th>
         <th class="hide-narrow">Status</th>
         <th class="hide-narrow">Task</th>
-        <th class="hide-narrow">Type</th>
+        <th class="hide-narrow">Assignee</th>
         <th>Date</th>
     </tr>
     </thead>
