Working on person resource and typeahead

--- a/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
@@ -65,9 +65,9 @@
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
         <h3>Assign Task</h3>
     </div>
-    <div class="modal-body">
+    <div class="modal-body" style="height:150px">
         <label class="inline">Assignee</label>
-        <input type="text" data-provide="typeahead" id="assignee" name="assignee"/>
+        <input type="text" id="assignee" name="assignee"/>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
